feature scaling pt.1

--- a/supervised/2_Python_Numpy and Vectorizaton.ipynb
+++ b/supervised/2_Python_Numpy and Vectorizaton.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7349023b",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bf88819c",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
       " [0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0.]], a shape = (4, 5), a data type = float64\n",
-      "np.random.random_sample(4): a = [0.74349355 0.07378474 0.29419292 0.2470596 ], a shape = (4,), a data type = float64\n"
+      "np.random.random_sample(4): a = [0.35965304 0.65408871 0.87583099 0.52609219], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "6d9156ca",
    "metadata": {
     "scrolled": true
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "np.arange(4.):     a = [0. 1. 2. 3.], a shape = (4,), a data type = float64\n",
-      "np.random.rand(4): a = [0.34247542 0.89538834 0.39517883 0.72241678], a shape = (4,), a data type = float64\n"
+      "np.random.rand(4): a = [0.61718918 0.16693843 0.25451942 0.2687794 ], a shape = (4,), a data type = float64\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "5fec1ffd",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "44bd80e9",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "95319476",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "1c5ed428",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "44cca2cb",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "a7931349",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "d679feeb",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "e8ceb54d",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "91c0c49c",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "9eebd68b",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "75a81419",
    "metadata": {},
    "outputs": [
@@ -447,9 +447,9 @@
      "text": [
       "None\n",
       "np.dot(a, b) =  2501072.5817\n",
-      "Vectorized version duration: 10.9353 ms \n",
+      "Vectorized version duration: 33.1280 ms \n",
       "np.dot(a, b) =  2501072.5817\n",
-      "loop version duration: 3223.9211 ms \n"
+      "loop version duration: 7216.7695 ms \n"
      ]
     }
    ],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "b96fd6a1",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
    "source": [
     "# previous week example\n",
     "\n",
-    "X=np.array([[1] , [2] , [3] , [4]])\n",
+    "x=np.array([[1] , [2] , [3] , [4]])\n",
     "w=np.array([2])\n",
     "c=np.dot(x[3] , w)\n",
     "\n",
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "91c1254f",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "ebe7d79a",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "6d2ce624",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "3be1d224",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "478bcce0",
    "metadata": {},
    "outputs": [
