handwritten digit recognition multiclass.

--- a/Advanced_learning_algorithms/3_NeuralNet_numpy.ipynb
+++ b/Advanced_learning_algorithms/3_NeuralNet_numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,21 +168,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([-0.47  0.42], shape=(2,), dtype=float32)\n"
+      "tf.Tensor(\n",
+      "[[-0.47  0.42]\n",
+      " [-0.47  3.16]], shape=(2, 2), dtype=float32)\n",
+      "[[9.72e-01]\n",
+      " [3.29e-08]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Roshan Chaudhary\\AppData\\Local\\Temp\\ipykernel_17588\\1964423084.py:5: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\Roshan Chaudhary\\AppData\\Local\\Temp\\ipykernel_20500\\1964423084.py:5: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  p[i,0]=my_sequential(X[i] , W1 , b1 ,W2 ,b2)\n"
      ]
     }
@@ -193,13 +197,14 @@
     "    [200, 17]\n",
     "])\n",
     "X_tstn=norm_l(X_tst)\n",
-    "print(X_tstn[0])\n",
-    "predictions=my_predict(X_tstn , W1_tmp , b1_tmp , W2_tmp , b2_tmp)"
+    "print(X_tstn)\n",
+    "predictions=my_predict(X_tstn , W1_tmp , b1_tmp , W2_tmp , b2_tmp)\n",
+    "print(predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Roshan Chaudhary\\AppData\\Local\\Temp\\ipykernel_17588\\1964423084.py:5: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\Roshan Chaudhary\\AppData\\Local\\Temp\\ipykernel_20500\\1964423084.py:5: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  p[i,0]=my_sequential(X[i] , W1 , b1 ,W2 ,b2)\n"
      ]
     },
